--- a/gui/main_form.ui
+++ b/gui/main_form.ui
@@ -162,7 +162,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>导入（或拖入）文件</string>
+          <string>导入文件</string>
          </property>
         </widget>
        </item>
